--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Aditi Care</title>
+  <title>Cuidando do que Importa</title>
 
   <base href="/">
 
